--- a/src/scss/theme/_general.scss
+++ b/src/scss/theme/_general.scss
@@ -119,7 +119,9 @@ body {
 }
 
 input[type='color'] {
-    min-height: 3rem;
+    min-height: 3.3rem;
+    max-width: 5rem;
+    padding: 0.5rem !important;
 }
 
 .nav-pills {
@@ -205,4 +207,14 @@ input[type='color'] {
 
 section {
     overflow: hidden;
+}
+
+#imgPreview svg {
+    width: 100% !important;
+    height: 100% !important;
+    margin-bottom: 1rem !important;
+}
+
+.btn-check.active + label {
+    background: $secondary !important;
 }
