--- a/src/scss/theme/_utils.scss
+++ b/src/scss/theme/_utils.scss
@@ -288,6 +288,7 @@ $spacing: 0.1em 0.2em 0.3em 0.4em 0.5em;
 
 .preview-holder {
     position: relative;
+    min-height: 200px;
 }
 
 .preview-loader {
@@ -296,45 +297,95 @@ $spacing: 0.1em 0.2em 0.3em 0.4em 0.5em;
     position: absolute;
     top: 0;
     left: 0;
-    background: rgba($card-bg, 0.7);
+    background: rgba($card-bg, 0.95);
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 99;
 }
 
-.lds-ring {
-    display: inline-block;
+.sk-chase {
+    width: 40px;
+    height: 40px;
     position: relative;
-    width: 80px;
-    height: 80px;
+    animation: sk-chase 2.5s infinite linear both;
 }
-.lds-ring div {
-    box-sizing: border-box;
-    display: block;
+
+.sk-chase-dot {
+    width: 100%;
+    height: 100%;
     position: absolute;
-    width: 64px;
-    height: 64px;
-    margin: 8px;
-    border: 8px solid $dark;
-    border-radius: 50%;
-    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: $dark transparent transparent transparent;
+    left: 0;
+    top: 0;
+    animation: sk-chase-dot 2s infinite ease-in-out both;
 }
-.lds-ring div:nth-child(1) {
-    animation-delay: -0.45s;
+
+.sk-chase-dot:before {
+    content: '';
+    display: block;
+    width: 25%;
+    height: 25%;
+    background-color: $dark;
+    border-radius: 100%;
+    animation: sk-chase-dot-before 2s infinite ease-in-out both;
 }
-.lds-ring div:nth-child(2) {
-    animation-delay: -0.3s;
+
+.sk-chase-dot:nth-child(1) {
+    animation-delay: -1.1s;
 }
-.lds-ring div:nth-child(3) {
-    animation-delay: -0.15s;
+.sk-chase-dot:nth-child(2) {
+    animation-delay: -1s;
 }
-@keyframes lds-ring {
-    0% {
-        transform: rotate(0deg);
-    }
+.sk-chase-dot:nth-child(3) {
+    animation-delay: -0.9s;
+}
+.sk-chase-dot:nth-child(4) {
+    animation-delay: -0.8s;
+}
+.sk-chase-dot:nth-child(5) {
+    animation-delay: -0.7s;
+}
+.sk-chase-dot:nth-child(6) {
+    animation-delay: -0.6s;
+}
+.sk-chase-dot:nth-child(1):before {
+    animation-delay: -1.1s;
+}
+.sk-chase-dot:nth-child(2):before {
+    animation-delay: -1s;
+}
+.sk-chase-dot:nth-child(3):before {
+    animation-delay: -0.9s;
+}
+.sk-chase-dot:nth-child(4):before {
+    animation-delay: -0.8s;
+}
+.sk-chase-dot:nth-child(5):before {
+    animation-delay: -0.7s;
+}
+.sk-chase-dot:nth-child(6):before {
+    animation-delay: -0.6s;
+}
+
+@keyframes sk-chase {
     100% {
         transform: rotate(360deg);
+    }
+}
+
+@keyframes sk-chase-dot {
+    80%,
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes sk-chase-dot-before {
+    50% {
+        transform: scale(0.4);
+    }
+    100%,
+    0% {
+        transform: scale(1);
     }
 }
