--- a/src/scss/theme/_variables.scss
+++ b/src/scss/theme/_variables.scss
@@ -35,12 +35,12 @@ $blue: #0d6efd !default;
 $indigo: #6610f2 !default;
 $purple: #6f42c1 !default;
 $pink: #d63384 !default;
-$red: #dc3545 !default;
+$red: #dd4e5d !default;
 $orange: #fd7e14 !default;
 $yellow: #ffc107 !default;
-$green: #28a745 !default;
+$green: #48ad7e !default;
 $teal: #20c997 !default;
-$cyan: #17a2b8 !default;
+$cyan: #0dcaf0 !default;
 
 // scss-docs-start colors-map
 $colors: (
